refactor: 순위 계산 로직 변경